--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!--========== END HEADER ==========-->
 <!-- update -->
         <!--========== SLIDER ==========-->
-        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="img/background.jpg">
+        <div class="promo-block parallax-window" data-parallax="scroll" data-image-src="../img/background.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -103,7 +103,7 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
 
-                            <p> Hi, my name is David and welcome to my personal website!</p>
+                            <p> Hi, my name is David and welcome to my personal website.</p>
 
 
                     </div>
