--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
 
-                            <p> Hi, my name is David and welcome to my personal website.</p>
+                            <p> Hi, my name is David and welcome to my personal website!</p>
 
 
                     </div>
