--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
 
-                            <p> Hi, my name is David and welcome to my personal website!</p>
+                            <p> Hi, my name is David and welcome to my personal website! I aspire to be a Software Engineer once I obtain a Bachelor's degree in Computer Science at UC San Diego (although I am willing to keep my options open, whether that be broadening my educational horizen or pursuing graduate school). While attending UC San Diego, I plan to build connections with peers, obtain internship positions, and have an overall memorable campus experience.   </p>
 
 
                     </div>
@@ -129,10 +129,11 @@
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
                         	<ul>
-                                <li>Knowledge with Java Spring Boot - <a href="https://www.udemy.com/course/spring-hibernate-tutorial/" target="_blank"><b>Course I had taken</b></a></li>
+                                <li>Knowledge of Java Spring Boot - <a href="https://www.udemy.com/course/spring-hibernate-tutorial/" target="_blank"><b>Udemy Course</b></a></li>
                                 <li><a href="https://ehmatthes.github.io/pcc/" target="_blank"><b>Python Crash Course</b></a></li>
                                 <li>Web Development - HTML, CSS, Javascript, and Angular</li>
                                 <li><a href="http://www.cplusplus.com/doc/tutorial/" target="_blank"><b>Basic knowledge of C++</b></a></li>
+                                <li>Implemented and utilized Data Structures and Algorithms with Java</li>
                             </ul>
 
                            
@@ -207,7 +208,7 @@
                         <div class="col-sm-3 sm-margin-b-30">
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Contact</h2>
-                                <p>Let's chat! Feel free to shoot a message!</p>
+                                <p>Let's chat! Feel free to shoot me a message!</p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
